// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNewChart 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 1,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
          27,
          28,
          29,
          30,
          31,
          32,
          33,
          34,
          35,
          36,
          37,
          38,
          39,
          40,
          41,
          42,
          43,
          44,
          45,
          46,
          47,
          48,
          49,
          50,
          51,
          52,
          53,
          54,
          55,
          56,
          57,
          58,
          59,
          60,
          61,
          62,
          63,
          64,
          65,
          66,
          67,
          68,
          69,
          70,
          71,
          72,
          73,
          74,
          75,
          76,
          77,
          78,
          79,
          80,
          81,
          82,
          83,
          84,
          85,
          86,
          87,
          88,
          89,
          90,
          91,
          92,
          93,
          94,
          95,
          96,
          97,
          98,
          99,
        ],
        "name": "Test new chart",
        "rowsX": 5,
        "rowsY": 5,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": undefined,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`CancelSearchRequest changes search state to waiting and aborts request controller 1`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`DeleteActiveChart replaces active chart if only one chart, otherwise removes 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
          27,
          28,
          29,
          30,
          31,
          32,
          33,
          34,
          35,
          36,
          37,
          38,
          39,
          40,
          41,
          42,
          43,
          44,
          45,
          46,
          47,
          48,
          49,
          50,
          51,
          52,
          53,
          54,
          55,
          56,
          57,
          58,
          59,
          60,
          61,
          62,
          63,
          64,
          65,
          66,
          67,
          68,
          69,
          70,
          71,
          72,
          73,
          74,
          75,
          76,
          77,
          78,
          79,
          80,
          81,
          82,
          83,
          84,
          85,
          86,
          87,
          88,
          89,
          90,
          91,
          92,
          93,
          94,
          95,
          96,
          97,
          98,
          99,
        ],
        "name": "Untitled chart",
        "rowsX": 5,
        "rowsY": 5,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": undefined,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DeleteActiveChart replaces active chart if only one chart, otherwise removes 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 1,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": undefined,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DeleteAlbum replaces album with id with a placeholder 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          Object {
            "id": 2,
            "name": "Test album 2",
            "url": "https://test.com/2",
          },
          Object {
            "id": 3,
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DeleteAlbum replaces album with id with a placeholder 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test album 1",
            "url": "https://test.com/1",
          },
          2,
          Object {
            "id": 3,
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DragChartAlbum inserts source after target when target id higher 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          4,
          5,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DragChartAlbum inserts source after target when target id higher 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          3,
          4,
          2,
          5,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DragChartAlbum inserts source before target when source id higher 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          5,
          3,
          4,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DragChartAlbum inserts source before target when source id higher 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          4,
          2,
          3,
          5,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DropSearchAlbum replaces album at target index 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test search album 4",
            "url": "https://test.com",
          },
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "albums": Array [
        Object {
          "name": "Test search album 4",
          "url": "https://test.com",
        },
        Object {
          "name": "Test search album 5",
          "url": "https://test.com",
        },
      ],
      "query": "Test query",
      "tag": "Complete",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`DropSearchAlbum replaces album at target index 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          Object {
            "id": 3,
            "name": "Test search album 5",
            "url": "https://test.com",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "albums": Array [
        Object {
          "name": "Test search album 4",
          "url": "https://test.com",
        },
        Object {
          "name": "Test search album 5",
          "url": "https://test.com",
        },
      ],
      "query": "Test query",
      "tag": "Complete",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`HighlightAlbum clears highlightedID if targetID does not exist 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test album 1",
            "url": "https://test.com/1",
          },
          Object {
            "id": 2,
            "name": "Test album 2",
            "url": "https://test.com/2",
          },
          Object {
            "id": 3,
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": undefined,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`HighlightAlbum clears highlightedID if targetID is a placeholder 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": undefined,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`HighlightAlbum sets highlightedID to targetID 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test album 1",
            "url": "https://test.com/1",
          },
          Object {
            "id": 2,
            "name": "Test album 2",
            "url": "https://test.com/2",
          },
          Object {
            "id": 3,
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": 1,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`ImportStateFile json parse error dispatches error action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`ImportStateFile read error dispatches error action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`ImportStateFile validation error dispatches error action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`ImportStateFile validation success dispatches load state action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`LoadExternalFile replaces album with id with new album with given uri and name 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test name",
            "url": "Test uri",
          },
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`LoadExternalFile replaces album with id with new album with given uri and name 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          Object {
            "id": 2,
            "name": "Other test name",
            "url": "Other test uri",
          },
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`MoveActiveChart moves chart down 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 1,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`MoveActiveChart moves chart down 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 2,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`MoveActiveChart moves chart up 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`MoveActiveChart moves chart up 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 1,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`PromptForNewChart cancelling the prompt dispatches nothing 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptForNewChart entering name of existing chart dispatches name taken action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptForNewChart entering nothing in the prompt dispatches nothing 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptForNewChart entering unique name dispatches new chart action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToDeleteActiveChart accepting the prompt dispatches delete action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToDeleteActiveChart declining the prompt dispatches nothing 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameActiveChart cancelling the prompt dispatches nothing 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameActiveChart entering name of other existing chart dispatches name taken action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameActiveChart entering nothing in the prompt dispatches nothing 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameActiveChart entering the same name as active chart in the prompt dispatches nothing 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameActiveChart entering unique name dispatches rename action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when album with id not found or placeholder 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when album with id not found or placeholder 2`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when album with id not found or placeholder 3`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when album with id not found or placeholder 4`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when prompt cancelled or nothing entered 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when prompt cancelled or nothing entered 2`] = `
Array [
  "Enter new album name:",
  "Test album 1",
]
`;

exports[`PromptToRenameAlbum dispatches nothing when prompt cancelled or nothing entered 3`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when prompt cancelled or nothing entered 4`] = `
Array [
  "Enter new album name:",
  "Test album 1",
]
`;

exports[`PromptToRenameAlbum dispatches nothing when prompt cancelled or nothing entered 5`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches nothing when prompt cancelled or nothing entered 6`] = `
Array [
  "Enter new album name:",
  "Test album 1",
]
`;

exports[`PromptToRenameAlbum dispatches rename action 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches rename action 2`] = `
Array [
  "Enter new album name:",
  "Test album 1",
]
`;

exports[`PromptToRenameAlbum dispatches rename action 3`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`PromptToRenameAlbum dispatches rename action 4`] = `
Array [
  "Enter new album name:",
  "Test album 2",
]
`;

exports[`RenameActiveChart 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Renamed test chart",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`RenameActiveChart 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Renamed test chart",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`RenameActiveChart 3`] = `
Object {
  "state": Object {
    "activeChartIndex": 2,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Renamed test chart",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`RenameAlbum renames album with id 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test new name",
            "url": "https://test.com/1",
          },
          Object {
            "id": 2,
            "name": "Test album 2",
            "url": "https://test.com/2",
          },
          Object {
            "id": 3,
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`RenameAlbum renames album with id 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          Object {
            "id": 1,
            "name": "Test album 1",
            "url": "https://test.com/1",
          },
          Object {
            "id": 2,
            "name": "Test other new name",
            "url": "https://test.com/2",
          },
          Object {
            "id": 3,
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`SendSearchRequest error when api key empty 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "message": "Last.fm API key required",
      "query": "Test query",
      "tag": "Error",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 1`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 2`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 3`] = `
Array [
  Object {
    "state": Object {
      "message": "Invalid data returned from Last.fm",
      "query": "Test query",
      "tag": "Error",
    },
    "tag": "UpdateSearchState",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 4`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 5`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 6`] = `
Array [
  Object {
    "state": Object {
      "message": "Invalid data returned from Last.fm",
      "query": "Test query",
      "tag": "Error",
    },
    "tag": "UpdateSearchState",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 7`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 8`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on other request errors 9`] = `
Array [
  Object {
    "state": Object {
      "message": "Network error sending request to Last.fm",
      "query": "Test query",
      "tag": "Error",
    },
    "tag": "UpdateSearchState",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on request status error 1`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches error action on request status error 2`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on request status error 3`] = `
Array [
  Object {
    "state": Object {
      "message": "Last.fm request returned 404",
      "query": "Test query",
      "tag": "Error",
    },
    "tag": "UpdateSearchState",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on request status error 4`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches error action on request status error 5`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`SendSearchRequest side effect dispatches error action on request status error 6`] = `
Array [
  Object {
    "state": Object {
      "message": "Last.fm request returned 500",
      "query": "Test query",
      "tag": "Error",
    },
    "tag": "UpdateSearchState",
  },
]
`;

exports[`SendSearchRequest side effect dispatches load state action on request success 1`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches load state action on request success 2`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`SendSearchRequest side effect dispatches load state action on request success 3`] = `
Array [
  Object {
    "state": Object {
      "activeChartIndex": 0,
      "apiKey": "Test API key",
      "charts": Array [
        Object {
          "albums": Array [
            1,
            2,
            3,
          ],
          "name": "Test chart 1",
          "rowsX": 10,
          "rowsY": 10,
          "shape": Object {
            "size": 40,
            "tag": "Top",
          },
        },
      ],
      "screenshot": Object {
        "loading": false,
        "scale": 2,
      },
      "search": Object {
        "albums": Array [
          Object {
            "name": "Test album 1",
            "url": "https://test.com/1",
          },
          Object {
            "name": "Test album 2",
            "url": "https://test.com/2",
          },
          Object {
            "name": "Test album 3",
            "url": "https://test.com/3",
          },
        ],
        "query": "Test query",
        "tag": "Complete",
      },
      "version": 2,
    },
    "tag": "LoadState",
  },
]
`;

exports[`SendSearchRequest side effect dispatches nothing when search cancelled 1`] = `
Object {
  "sideEffect": [Function],
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": Object {
        "signal": "Test signal",
      },
      "query": "Test query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "UpdateWithSideEffect",
}
`;

exports[`SendSearchRequest side effect dispatches nothing when search cancelled 2`] = `
Array [
  Object {
    "key": "Test API key",
    "query": "Test query",
    "signal": "Test signal",
  },
]
`;

exports[`ShowChartNameTakenMessage calls alert 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`ShowInvalidStateImportMessage shows alert 1`] = `
Object {
  "sideEffect": [Function],
  "tag": "SideEffect",
}
`;

exports[`UpdateAPIKey 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "New API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateActiveChart 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 123,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "highlightedID": undefined,
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateChartShape updates chart shape and rows 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 3,
        "rowsY": 7,
        "shape": Object {
          "tag": "Collage",
        },
      },
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateChartShape updates chart shape and rows 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 5,
        "rowsY": 5,
        "shape": Object {
          "size": 100,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          4,
          5,
          6,
        ],
        "name": "Test chart 2",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
      Object {
        "albums": Array [
          7,
          8,
          9,
        ],
        "name": "Test chart 3",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateScreenshotLoading 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": true,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateScreenshotLoading 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateScreenshotScale updates screenshot scale 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateScreenshotScale updates screenshot scale 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 3,
    },
    "search": Object {
      "query": "Test query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchQuery update for other search states 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "albums": Array [
        Object {
          "name": "Test search album",
          "url": "https://test.com",
        },
      ],
      "query": "Test new query",
      "tag": "Complete",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchQuery update for other search states 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "message": "Test error message",
      "query": "Test new query",
      "tag": "Error",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchQuery update for other search states 3`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test new query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchState 1`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "albums": Array [
        Object {
          "name": "Test search album",
          "url": "https://test.com",
        },
      ],
      "query": "Test complete query",
      "tag": "Complete",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchState 2`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "message": "Test error message",
      "query": "Test error query",
      "tag": "Error",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchState 3`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "controller": "Test controller",
      "query": "Test loading query",
      "tag": "Loading",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;

exports[`UpdateSearchState 4`] = `
Object {
  "state": Object {
    "activeChartIndex": 0,
    "apiKey": "Test API key",
    "charts": Array [
      Object {
        "albums": Array [
          1,
          2,
          3,
        ],
        "name": "Test chart 1",
        "rowsX": 10,
        "rowsY": 10,
        "shape": Object {
          "size": 40,
          "tag": "Top",
        },
      },
    ],
    "screenshot": Object {
      "loading": false,
      "scale": 2,
    },
    "search": Object {
      "query": "Test waiting query",
      "tag": "Waiting",
    },
    "version": 2,
  },
  "tag": "Update",
}
`;
